[package]
name = "cassiop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
env_logger = "0.10.1"
log = "0.4.20"
winit = "0.28.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
metal = "0.27.0"
objc = "0.2.7"