[package]
name = "cassiop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
env_logger = "0.10.1"
log = "0.4.20"
raw-window-handle = "0.5.0"
winit = { version = "0.29.15", features = ["rwh_05"] }