[package]
name = "cassiop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ash = { version = "0.38", features = ["linked"] }
ash-window = "0.13"
env_logger = "0.11.3"
glam = "0.27.0"
log = "0.4.20"
raw-window-handle = "0.6"
winit = { version = "0.29.15", features = ["rwh_05"] }
